First release! Will ship next ones with your feedback and our progress. Merry Christmas and Happy New Year!