@@ -286,31 +286,56 @@
                                             <action selector="revertButtonPressed:" destination="e5K-88-RHN" eventType="touchUpInside" id="y5b-ws-bLv"/>
                                         </connections>
                                     </button>
-                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="xxx in proress" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hvA-rn-dyc">
-                                        <rect key="frame" x="70" y="491.66666666666669" width="348" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="2xW-6p-OvC"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" name="Amazon"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="DIW-Kk-Ld2">
-                                        <rect key="frame" x="70" y="444.66666666666669" width="348" height="37"/>
-                                        <color key="color" name="Amazon"/>
-                                    </activityIndicatorView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="gKY-t3-jlp">
+                                        <rect key="frame" x="114" y="801" width="200" height="75"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w5G-Cg-2cn">
+                                                <rect key="frame" x="0.0" y="0.0" width="200" height="40"/>
+                                                <subviews>
+                                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="DIW-Kk-Ld2">
+                                                        <rect key="frame" x="81.666666666666657" y="0.0" width="37" height="40"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="40" id="Fga-W1-pkW"/>
+                                                        </constraints>
+                                                        <color key="color" name="Amazon"/>
+                                                    </activityIndicatorView>
+                                                </subviews>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstItem="DIW-Kk-Ld2" firstAttribute="centerX" secondItem="w5G-Cg-2cn" secondAttribute="centerX" id="KeL-zV-CPp"/>
+                                                    <constraint firstItem="DIW-Kk-Ld2" firstAttribute="centerY" secondItem="w5G-Cg-2cn" secondAttribute="centerY" id="dCG-Za-6wJ"/>
+                                                    <constraint firstAttribute="height" constant="40" id="gL4-bc-vK6"/>
+                                                    <constraint firstAttribute="width" constant="200" id="yh9-aM-gV9"/>
+                                                </constraints>
+                                            </view>
+                                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="xxx in proress" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hvA-rn-dyc">
+                                                <rect key="frame" x="0.0" y="45" width="200" height="25"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="25" id="xPi-0b-IeG"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" name="Amazon"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="xxx in proress" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sHW-bS-FtV">
+                                                <rect key="frame" x="0.0" y="50" width="200" height="25"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="25" id="HQT-En-3I2"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" name="Amazon"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="hvA-rn-dyc" firstAttribute="top" secondItem="DIW-Kk-Ld2" secondAttribute="bottom" constant="10" id="BWB-5b-TD4"/>
                                     <constraint firstItem="gLc-0f-J3G" firstAttribute="top" secondItem="UxD-LD-F6G" secondAttribute="top" constant="120" id="BdL-IK-LQb"/>
-                                    <constraint firstAttribute="trailing" secondItem="hvA-rn-dyc" secondAttribute="trailing" constant="10" id="OQK-Mc-8VU"/>
-                                    <constraint firstAttribute="trailing" secondItem="DIW-Kk-Ld2" secondAttribute="trailing" constant="10" id="OhJ-FC-KIs"/>
+                                    <constraint firstItem="gKY-t3-jlp" firstAttribute="centerX" secondItem="UxD-LD-F6G" secondAttribute="centerX" id="LGz-eT-3cl"/>
                                     <constraint firstItem="gLc-0f-J3G" firstAttribute="leading" secondItem="UxD-LD-F6G" secondAttribute="leading" constant="10" id="ezK-in-SW5"/>
-                                    <constraint firstItem="DIW-Kk-Ld2" firstAttribute="centerY" secondItem="UxD-LD-F6G" secondAttribute="centerY" id="mvf-J4-e4G"/>
+                                    <constraint firstAttribute="bottom" secondItem="gKY-t3-jlp" secondAttribute="bottom" constant="50" id="ieE-JK-WpN"/>
                                     <constraint firstItem="L3l-ks-6yo" firstAttribute="leading" secondItem="UxD-LD-F6G" secondAttribute="leading" constant="10" id="pXu-aJ-nWR"/>
                                     <constraint firstAttribute="bottom" secondItem="L3l-ks-6yo" secondAttribute="bottom" constant="40" id="sWC-hz-M6L"/>
-                                    <constraint firstItem="hvA-rn-dyc" firstAttribute="leading" secondItem="gLc-0f-J3G" secondAttribute="trailing" constant="10" id="wzs-gq-Ho6"/>
-                                    <constraint firstItem="DIW-Kk-Ld2" firstAttribute="leading" secondItem="gLc-0f-J3G" secondAttribute="trailing" constant="10" id="xld-g1-r4d"/>
                                 </constraints>
                             </glkView>
                         </subviews>
@@ -346,6 +371,7 @@
                         <outlet property="exportBarButtonItem" destination="edD-ea-Kpd" id="0F7-Yr-nyS"/>
                         <outlet property="importButton" destination="ffg-AP-LTH" id="aSn-eK-xR2"/>
                         <outlet property="inProgressLabel" destination="hvA-rn-dyc" id="0Io-tC-gU3"/>
+                        <outlet property="informationLabel" destination="sHW-bS-FtV" id="ITb-jC-WDj"/>
                         <outlet property="outlierFilterButton" destination="Gsi-3p-rU7" id="fkz-P8-bWe"/>
                         <outlet property="resetCameraPositionButton" destination="1JQ-c2-Y0D" id="sod-8H-niy"/>
                         <outlet property="revertButton" destination="L3l-ks-6yo" id="RdV-PJ-XDU"/>
@@ -356,7 +382,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OMY-8p-Fdf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="585.50724637681162" y="600"/>
+            <point key="canvasLocation" x="584.57943925233644" y="599.35205183585322"/>
         </scene>
     </scenes>
     <resources>
