@@ -1,1 +1,1 @@
-
+https://github.com/ad-1/App-Support/blob/master/dumb-jokes-privacy-policy.txt
